--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,10 +43,12 @@
               content. This content is a little bit longer.</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" mat-raised-button class="ml-1">Download</button>
-                <button type="button" mat-raised-button class="ml-1"><span class="material-icons">
+                <button type="button" mat-raised-button class="ml-1"> <span class="material-icons">
+                    cloud_download
+                  </span> Download</button>
+                <button type="button" mat-raised-button class="ml-1" (click)="openDialog()" class="ml-1"><span class="material-icons">
                     play_circle_filled
-                  </span>Play</button>
+                  </span> Play</button>
               </div>
               <small class="text-muted">9 mins</small>
             </div>
@@ -61,120 +63,12 @@
               content. This content is a little bit longer.</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" mat-raised-button class="ml-1">Download</button>
-                <button type="button" mat-raised-button class="ml-1"><span class="material-icons">
+                <button type="button" mat-raised-button class="ml-1"> <span class="material-icons">
+                    cloud_download
+                  </span> Download</button>
+                <button type="button" mat-raised-button class="ml-1" class="ml-1"><span class="material-icons">
                     play_circle_filled
-                  </span>Play</button>
-              </div>
-              <small class="text-muted">9 mins</small>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-4 shadow-sm">
-          <!-- {% include icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %} -->
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" mat-raised-button class="ml-1">Download</button>
-                <button type="button" mat-raised-button class="ml-1"><span class="material-icons">
-                    play_circle_filled
-                  </span>Play</button>
-              </div>
-              <small class="text-muted">9 mins</small>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card mb-4 shadow-sm">
-          <!-- {% include icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %} -->
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" mat-raised-button class="ml-1">Download</button>
-                <button type="button" mat-raised-button class="ml-1"><span class="material-icons">
-                    play_circle_filled
-                  </span>Play</button>
-              </div>
-              <small class="text-muted">9 mins</small>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card mb-4 shadow-sm">
-          <!-- {% include icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %} -->
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" mat-raised-button class="ml-1">Download</button>
-                <button type="button" mat-raised-button class="ml-1"><span class="material-icons">
-                    play_circle_filled
-                  </span>Play</button>
-              </div>
-              <small class="text-muted">9 mins</small>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-4 shadow-sm">
-          <!-- {% include icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %} -->
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" mat-raised-button class="ml-1">Download</button>
-                <button type="button" mat-raised-button class="ml-1"><span class="material-icons">
-                    play_circle_filled
-                  </span>Play</button>
-              </div>
-              <small class="text-muted">9 mins</small>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card mb-4 shadow-sm">
-          <!-- {% include icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %} -->
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" mat-raised-button class="ml-1">Download</button>
-                <button type="button" mat-raised-button class="ml-1"><span class="material-icons">
-                    play_circle_filled
-                  </span>Play</button>
-              </div>
-              <small class="text-muted">9 mins</small>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card mb-4 shadow-sm">
-          <!-- {% include icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %} -->
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" mat-raised-button class="ml-1">Download</button>
-                <button type="button" mat-raised-button class="ml-1"><span class="material-icons">
-                    play_circle_filled
-                  </span>Play</button>
+                  </span> Play</button>
               </div>
               <small class="text-muted">9 mins</small>
             </div>
@@ -188,8 +82,8 @@
 <footer class="text-muted">
   <div class="container">
     <p class="float-right">
-      <a href="#">Back to top</a>
+      <a href="#"><button mat-mini-fab color="primary">Top</button></a>
     </p>
-    <p>AFM VOC is based in Meadowlands. Exact address is 30005 Forbes road ext 11.</p>
+    <p>AFM VOC is based in Meadowlands. Address: 30005 Forbes road ext 11.</p>
   </div>
 </footer>
