--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,3 +32,13 @@
     margin-bottom: .25rem;
   }
   
+
+  .material-card {
+    max-width: 400px;
+    min-height: 200px;
+  }
+  
+  .material-header-image {
+    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-size: cover;
+  }
