--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,60 +17,48 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
-          <!-- {% include icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %} -->
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
+          <div class="card-body" style="min-height: 450px;">
+            <img mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 150;" />
+            <p class="card-text" style="min-height: 80px; max-height: 80px;">A brief description of the mesage. This can be extracted from the slides associated with the message.</p>
             <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" mat-raised-button class="ml-1"> <span class="material-icons">
-                    cloud_download
-                  </span> Download</button>
-                <button type="button" mat-raised-button class="ml-1" class="ml-1"><span class="material-icons">
-                    play_circle_filled
-                  </span> Play</button>
-              </div>
-              <small class="text-muted">9 mins</small>
+              <figure class="btn-group">
+                <audio style="max-width: 300px" controls>
+                  <source src="../assets/podcast2.mp3" type="audio/mpeg">
+                  Your browser does not support the audio element.
+                </audio>
+              </figure>
             </div>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
-          <!-- {% include icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %} -->
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
+          <div class="card-body" style="min-height: 450px;">
+            <img mat-card-image src="../assets/podcast2.jpg" style="width: 100%; height: 150;" />
+            <p class="card-text" style="min-height: 80px; max-height: 80px;">A brief description of the mesage. This can be extracted from the slides associated with the message.</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" mat-raised-button class="ml-1"> <span class="material-icons">
-                    cloud_download
-                  </span> Download</button>
-                <button type="button" mat-raised-button class="ml-1" (click)="openDialog()" class="ml-1"><span class="material-icons">
-                    play_circle_filled
-                  </span> Play</button>
+                <audio style="max-width: 300px;" controls>
+                  <source src="../assets/podcast2.mp3" type="audio/mpeg">
+                  Your browser does not support the audio element.
+                </audio>
               </div>
-              <small class="text-muted">9 mins</small>
             </div>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
-          <!-- {% include icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %} -->
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
+          <div class="card-body" style="min-height: 450px;">
+            <img mat-card-image src="../assets/podcast3.jpg" style="width: 100%; height: 150;" />
+            <p class="card-text" style="min-height: 80px; max-height: 80px;">A brief description of the mesage. This can be extracted from the slides associated with the message.</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" mat-raised-button class="ml-1"> <span class="material-icons">
-                    cloud_download
-                  </span> Download</button>
-                <button type="button" mat-raised-button class="ml-1" class="ml-1"><span class="material-icons">
-                    play_circle_filled
-                  </span> Play</button>
+                <audio style="max-width: 300px;" controls>
+                  <source src="../assets/podcast2.mp3" type="audio/mpeg">
+                  Your browser does not support the audio element.
+                </audio>
               </div>
-              <small class="text-muted">9 mins</small>
             </div>
           </div>
         </div>
