Added media sample

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 <div class="container">
   <section class="jumbotron text-center">
     <div class="container">
-      <h1>AFM VOC - Podcast central</h1>
+      <h1><b>AFM VOC</b> - Podcast central</h1>
       <p class="lead text-muted">Beyond the trying times, we have established this as a central place to listen and
         interact with media that enhances your journey in faith. Listen below and reach out to us if you need something
         else.</p>
