--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,11 +19,11 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 450px;">
             <img mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 150;" />
-            <p class="card-text" style="min-height: 80px; max-height: 80px;">A brief description of the mesage. This can be extracted from the slides associated with the message.</p>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Welcome to the VOC Podcast page. Please listen to a welcome message from our pastor below.</p>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
                 <audio style="max-width: 300px" controls>
-                  <source src="../assets/podcast2.mp3" type="audio/mpeg">
+                  <source src="../assets/welcome.ogg" type="audio/ogg">
                   Your browser does not support the audio element.
                 </audio>
               </figure>
@@ -35,7 +35,7 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 450px;">
             <img mat-card-image src="../assets/podcast2.jpg" style="width: 100%; height: 150;" />
-            <p class="card-text" style="min-height: 80px; max-height: 80px;">A brief description of the mesage. This can be extracted from the slides associated with the message.</p>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">A brief description of the mesage. This can be extracted from the slides associated with the message.</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <audio style="max-width: 300px;" controls>
@@ -51,7 +51,7 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 450px;">
             <img mat-card-image src="../assets/podcast3.jpg" style="width: 100%; height: 150;" />
-            <p class="card-text" style="min-height: 80px; max-height: 80px;">A brief description of the mesage. This can be extracted from the slides associated with the message.</p>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">A brief description of the mesage. This can be extracted from the slides associated with the message.</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <audio style="max-width: 300px;" controls>
