--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,11 +19,11 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 450px;">
             <img mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 150;" />
-            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Welcome to the VOC Podcast page. Please listen to a welcome message from our pastor below.</p>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please listen to a welcome message from our pastor below. You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 5.5MB]</b> </p>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
                 <audio style="max-width: 300px" controls>
-                  <source src="../assets/welcome.ogg" type="audio/ogg">
+                  <source src="../assets/podcast20200329.mp3" type="audio/mpeg">
                   Your browser does not support the audio element.
                 </audio>
               </figure>
@@ -34,31 +34,32 @@
       <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 450px;">
-            <img mat-card-image src="../assets/podcast2.jpg" style="width: 100%; height: 150;" />
-            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">A brief description of the mesage. This can be extracted from the slides associated with the message.</p>
-            <div class="d-flex justify-content-between align-items-center">
+            <!-- <img mat-card-image src="../assets/podcast2.jpg" style="width: 100%; height: 150;" /> -->
+            <ng-image-slider [images]="imageSrc" #nav></ng-image-slider>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">We have compiled this weeks message into pictures. Please click on the pictures above to see todays message in picture form.</p>
+            <!-- <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <audio style="max-width: 300px;" controls>
                   <source src="../assets/podcast2.mp3" type="audio/mpeg">
                   Your browser does not support the audio element.
                 </audio>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 450px;">
-            <img mat-card-image src="../assets/podcast3.jpg" style="width: 100%; height: 150;" />
-            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">A brief description of the mesage. This can be extracted from the slides associated with the message.</p>
+            <img mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 150;" />
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Welcome to the VOC Podcast page. Please listen to a welcome message from our pastor below.<b>[Filesize: 75.6KB]</b></p>
             <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <audio style="max-width: 300px;" controls>
-                  <source src="../assets/podcast2.mp3" type="audio/mpeg">
+              <figure class="btn-group">
+                <audio style="max-width: 300px" controls>
+                  <source src="../assets/welcome.ogg" type="audio/ogg">
                   Your browser does not support the audio element.
                 </audio>
-              </div>
+              </figure>
             </div>
           </div>
         </div>
