Updated message for this week

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 450px;">
             <img mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 150;" />
-            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please listen to a welcome message from our pastor below. You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 5.5MB]</b> </p>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below the message for this week, 29th of March 2020. You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 5.5MB]</b> </p>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
                 <audio style="max-width: 300px" controls>
