Changed from scanned logo to scalable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <img src="../assets/logo.jpg" style="width: 45px; height: 45px;" />
+  <img src="../assets/logo.png" style="width: 45px; height: 45px;" />
   <a href="#" style="color: grey;">AFM - Victory Outreach Center</a>
 </mat-toolbar>
 
