--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,33 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
+          <div class="card-body" style="min-height: 500px;">
+            <h5 class="card-title" style="font-size: large;">Through the valley [Audio]</h5>
+            <img mat-card-image src="../assets/podcast4.jpg" style="width: 100%; height: 150;" />
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below the message for this week, 5th of April 2020. You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 19.9MB]</b> </p>
+            <br/>
+            <div class="d-flex justify-content-between align-items-center">
+              <figure class="btn-group">
+                <audio style="max-width: 300px" controls>
+                  <source src="../assets/podcast20200405.mpeg" type="audio/mpeg">
+                  Your browser does not support the audio element.
+                </audio>
+              </figure>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-body" style="min-height: 450px;">
+            <h5 class="card-title" style="font-size: large;">Through the valley [Slides]</h5>
+            <ng-image-slider [images]="images20200405" #nav></ng-image-slider>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">We have compiled this weeks message into pictures. Please click on the pictures above to see today's message in picture form.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 450px;">
             <img mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 150;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below the message for this week, 29th of March 2020. You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 5.5MB]</b> </p>
@@ -34,17 +61,8 @@
       <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 450px;">
-            <!-- <img mat-card-image src="../assets/podcast2.jpg" style="width: 100%; height: 150;" /> -->
-            <ng-image-slider [images]="imageSrc" #nav></ng-image-slider>
-            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">We have compiled this weeks message into pictures. Please click on the pictures above to see todays message in picture form.</p>
-            <!-- <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <audio style="max-width: 300px;" controls>
-                  <source src="../assets/podcast2.mp3" type="audio/mpeg">
-                  Your browser does not support the audio element.
-                </audio>
-              </div>
-            </div> -->
+            <ng-image-slider [images]="images20200323" #nav></ng-image-slider>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">We have compiled this weeks message into pictures. Please click on the pictures above to see today's message in picture form.</p>
           </div>
         </div>
       </div>
