--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
-<mat-toolbar>
-  <img src="../assets/logo.png" style="width: 45px; height: 45px;" />
-  <a href="#" style="color: grey;">AFM - Victory Outreach Center</a>
-</mat-toolbar>
+<header class="mdc-top-app-bar">
+  <div class="mdc-top-app-bar__row">
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+          <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
+          <span class="mdc-top-app-bar__title">AFM - Victory Outreach Center</span>
+      </section>
+  </div>
+</header>
+<br/>
+<br/>
+<br/>
 
 <div class="container">
   <section class="jumbotron text-center">
@@ -46,7 +53,9 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 450px;">
             <img mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 150;" />
-            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below the message for this week, 29th of March 2020. You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 5.5MB]</b> </p>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below
+              the message for this week, 29th of March 2020. You can also download the message and send to friends,
+              family and fellow believers and non-belivers. <b>[Filesize: 5.5MB]</b> </p>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
                 <audio style="max-width: 300px" controls>
@@ -70,7 +79,8 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 450px;">
             <img mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 150;" />
-            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Welcome to the VOC Podcast page. Please listen to a welcome message from our pastor below.<b>[Filesize: 75.6KB]</b></p>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Welcome to the VOC
+              Podcast page. Please listen to a welcome message from our pastor below.<b>[Filesize: 75.6KB]</b></p>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
                 <audio style="max-width: 300px" controls>
