--- a/src/app/podcast.html
+++ b/src/app/podcast.html
@@ -1,7 +1,1 @@
-<h3>Message title</h3>
-<div>
-    <audio style="width: 250px;" controls>
-        <source src="../assets/podcast2.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-      </audio>
-</div>
+<img src="../assets/voc-easter-banner.jpg" width="100%" height="100%" >
