--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <header class="mdc-top-app-bar">
   <div class="mdc-top-app-bar__row">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-          <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
+        <img src="../assets/logo.png" width="36px" height="36px">
+          <!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"></button> -->
           <span class="mdc-top-app-bar__title">AFM - Victory Outreach Center</span>
       </section>
   </div>
