--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="mdc-top-app-bar">
   <div class="mdc-top-app-bar__row">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-        <img src="../assets/logo.png" width="36px" height="36px">
+        <img class="lazyload" alt="" src="../assets/logo.png" width="36px" height="36px">
           <!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"></button> -->
           <span class="mdc-top-app-bar__title">AFM - Victory Outreach Center</span>
       </section>
@@ -23,16 +23,43 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-sm">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-body" style="min-height: 500px;">
+            <h5 class="card-title" style="font-size: large;">The mocking of Jesus [Audio]</h5>
+            <img class="lazyload" alt="" mat-card-image src="../assets/podcast4.jpg" style="width: 100%; height: 300px;" />
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below the message for this week, 10th of April 2020 (Easter). You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 11.7MB]</b> </p>
+            <br/><br/><br/>
+            <div class="d-flex justify-content-between align-items-center">
+              <figure class="btn-group">
+                <audio style="max-width: 300px; min-width: 200px !important;" controls>
+                  <source src="../assets/podcast5.mp3" type="audio/mpeg">
+                  Your browser does not support the audio element.
+                </audio>
+              </figure>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-body" >
+            <h5 class="card-title" style="font-size: large;">The mocking of Jesus [Slides]</h5>
+            <ng-image-slider [imageSize]="imageSliderSize" [images]="images20200410" class="lazyload" alt="" #nav></ng-image-slider>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">We have compiled this weeks message into pictures. Please click on the pictures above to see today's message in picture form.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 500px;">
             <h5 class="card-title" style="font-size: large;">Through the valley [Audio]</h5>
-            <img mat-card-image src="../assets/podcast4.jpg" style="width: 100%; height: 150;" />
+            <img class="lazyload" alt="" mat-card-image src="../assets/podcast4.jpg" style="width: 100%; height: 300px;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below the message for this week, 5th of April 2020. You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 19.9MB]</b> </p>
-            <br/>
+            <br/><br/><br/>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
-                <audio style="max-width: 300px" controls>
+                <audio style="max-width: 300px; min-width: 200px !important;" controls>
                   <source src="../assets/podcast20200405.mpeg" type="audio/mpeg">
                   Your browser does not support the audio element.
                 </audio>
@@ -41,25 +68,27 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm">
         <div class="card mb-4 shadow-sm">
-          <div class="card-body" style="min-height: 450px;">
+          <div class="card-body" >
             <h5 class="card-title" style="font-size: large;">Through the valley [Slides]</h5>
-            <ng-image-slider [images]="images20200405" #nav></ng-image-slider>
+            <ng-image-slider [imageSize]="imageSliderSize" [images]="images20200405" class="lazyload" alt="" #nav></ng-image-slider>
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">We have compiled this weeks message into pictures. Please click on the pictures above to see today's message in picture form.</p>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm">
         <div class="card mb-4 shadow-sm">
-          <div class="card-body" style="min-height: 450px;">
-            <img mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 150;" />
+          <div class="card-body" >
+            <h5 class="card-title" style="font-size: large;">The Lord is with you [Audio]</h5>
+            <img class="lazyload" alt="" mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 300px;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below
               the message for this week, 29th of March 2020. You can also download the message and send to friends,
               family and fellow believers and non-belivers. <b>[Filesize: 5.5MB]</b> </p>
+              <br/><br/>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
-                <audio style="max-width: 300px" controls>
+                <audio style="max-width: 300px; min-width: 200px !important;" controls>
                   <source src="../assets/podcast20200329.mp3" type="audio/mpeg">
                   Your browser does not support the audio element.
                 </audio>
@@ -68,23 +97,26 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm">
         <div class="card mb-4 shadow-sm">
-          <div class="card-body" style="min-height: 450px;">
-            <ng-image-slider [images]="images20200323" #nav></ng-image-slider>
+          <div class="card-body" >
+            <h5 class="card-title" style="font-size: large;">Through the valley [Slides]</h5>
+            <ng-image-slider [imageSize]="imageSliderSize" [images]="images20200323" #nav></ng-image-slider>
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">We have compiled this weeks message into pictures. Please click on the pictures above to see today's message in picture form.</p>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm">
         <div class="card mb-4 shadow-sm">
-          <div class="card-body" style="min-height: 450px;">
-            <img mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 150;" />
+          <div class="card-body" >
+            <h5 class="card-title" style="font-size: large;">Welcome</h5>
+            <img class="lazyload" alt="" mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 300px;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Welcome to the VOC
               Podcast page. Please listen to a welcome message from our pastor below.<b>[Filesize: 75.6KB]</b></p>
-            <div class="d-flex justify-content-between align-items-center">
+              <br/><br/>
+            <div style="max-width: 250px !important"  class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
-                <audio style="max-width: 300px" controls>
+                <audio controls>
                   <source src="../assets/welcome.ogg" type="audio/ogg">
                   Your browser does not support the audio element.
                 </audio>
