--- a/src/app/podcast.html
+++ b/src/app/podcast.html
@@ -1,1 +1,1 @@
-<img src="../assets/voc-easter-banner.jpg" width="100%" height="100%" >
+<img src="../assets/voc-easter-banner.jpg" class="lazyload" alt="" width="100%" height="100%" >
