--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,9 +27,9 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 500px;">
             <h5 class="card-title" style="font-size: large;">The mocking of Jesus [Audio]</h5>
-            <img class="lazyload" alt="" mat-card-image src="../assets/podcast4.jpg" style="width: 100%; height: 300px;" />
+            <img class="lazyload" alt="" mat-card-image src="../assets/easter.jpg" style="width: 100%; height: 300px;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below the message for this week, 10th of April 2020 (Easter). You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 11.7MB]</b> </p>
-            <br/><br/><br/>
+            <br><br>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
                 <audio style="max-width: 300px; min-width: 200px !important;" controls>
@@ -56,7 +56,7 @@
             <h5 class="card-title" style="font-size: large;">Through the valley [Audio]</h5>
             <img class="lazyload" alt="" mat-card-image src="../assets/podcast4.jpg" style="width: 100%; height: 300px;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below the message for this week, 5th of April 2020. You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 19.9MB]</b> </p>
-            <br/><br/><br/>
+            <br/><br>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
                 <audio style="max-width: 300px; min-width: 200px !important;" controls>
@@ -85,7 +85,7 @@
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below
               the message for this week, 29th of March 2020. You can also download the message and send to friends,
               family and fellow believers and non-belivers. <b>[Filesize: 5.5MB]</b> </p>
-              <br/><br/>
+              <br><br>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
                 <audio style="max-width: 300px; min-width: 200px !important;" controls>
@@ -113,7 +113,7 @@
             <img class="lazyload" alt="" mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 300px;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Welcome to the VOC
               Podcast page. Please listen to a welcome message from our pastor below.<b>[Filesize: 75.6KB]</b></p>
-              <br/><br/>
+              <br>
             <div style="max-width: 250px !important"  class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
                 <audio controls>
