--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,21 @@
       <div class="col-sm">
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 500px;">
+            <h5 class="card-title" style="font-size: large;">The first Easter<b>[Filesize: 11.7MB]</b></h5>
+            <div class="d-flex justify-content-between align-items-center">
+              <figure class="btn-group">
+                <video class="video-properties" preload="none" poster="../assets/videocast1poster.png" controls>
+                  <source src="../assets/videocast1.mp4" type="video/mp4">
+                  Your browser does not support the video element.
+                </video>
+              </figure>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-body" style="min-height: 500px;">
             <h5 class="card-title" style="font-size: large;">The mocking of Jesus [Audio]</h5>
             <img class="lazyload" alt="" mat-card-image src="../assets/easter.jpg" style="width: 100%; height: 300px;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below the message for this week, 10th of April 2020 (Easter). You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 11.7MB]</b> </p>
@@ -59,7 +74,7 @@
             <br/><br>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
-                <audio style="max-width: 300px; min-width: 200px !important;" controls>
+                <audio preload="none" style="max-width: 300px; min-width: 200px !important;" controls>
                   <source src="../assets/podcast20200405.mpeg" type="audio/mpeg">
                   Your browser does not support the audio element.
                 </audio>
@@ -88,7 +103,7 @@
               <br><br>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
-                <audio style="max-width: 300px; min-width: 200px !important;" controls>
+                <audio preload="none" style="max-width: 300px; min-width: 200px !important;" controls>
                   <source src="../assets/podcast20200329.mp3" type="audio/mpeg">
                   Your browser does not support the audio element.
                 </audio>
@@ -116,7 +131,7 @@
               <br>
             <div style="max-width: 250px !important"  class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
-                <audio controls>
+                <audio preload="none" controls>
                   <source src="../assets/welcome.ogg" type="audio/ogg">
                   Your browser does not support the audio element.
                 </audio>
