--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
             <h5 class="card-title" style="font-size: large;">The first Easter<b>[Filesize: 11.7MB]</b></h5>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
-                <video class="video-properties" preload="none" poster="../assets/videocast1poster.png" controls>
+                <video style="max-width: 100%;" class="video-properties" preload="none" poster="../assets/videocast1poster.png" controls>
                   <source src="../assets/videocast1.mp4" type="video/mp4">
                   Your browser does not support the video element.
                 </video>
