added about page with content

--- a/src/styles.css
+++ b/src/styles.css
@@ -57,3 +57,21 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   .card-body {
     min-height: 550px !important;
   }
+
+  .nav-spacer {
+    flex: 1 1 auto;
+  }
+
+.example-headers-align .mat-expansion-panel-header-title,
+.example-headers-align .mat-expansion-panel-header-description {
+  flex-basis: 0;
+}
+
+.example-headers-align .mat-expansion-panel-header-description {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.example-headers-align .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
