--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,13 @@
   <div class="mdc-top-app-bar__row">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
         <img class="lazyload" alt="" src="../assets/logo.webp" width="36px" height="36px">
-          <!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"></button> -->
-          <span class="mdc-top-app-bar__title">AFM - Victory Outreach Center</span>
+          <a [routerLink]="['/home']" style="color: white;">
+            <span class="mdc-top-app-bar__title">AFM - VOC</span>
+          </a>
+          <span class="nav-spacer"></span>
+          <a [routerLink]="['/about']" style="color: white;"><span style="width: 100%; height: 100%;" class="material-icons">
+            info
+            </span>Info</a>
       </section>
   </div>
 </header>
@@ -16,9 +21,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1><b>AFM VOC</b> - Podcast central</h1>
-      <p class="lead text-muted">Beyond the trying times, we have established this as a central place to listen and
-        interact with media that enhances your journey in faith. Listen below and reach out to us if you need something
-        else.</p>
+      <p class="lead text-muted">To our neighbors with an open heart and open hands</p>
     </div>
   </section>
 
