About us page added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
         <img class="lazyload" alt="" src="../assets/logo.webp" width="36px" height="36px">
           <a [routerLink]="['/home']" style="color: white;">
-            <span class="mdc-top-app-bar__title">AFM - VOC</span>
+            <span class="mdc-top-app-bar__title short-text">AFM - VOC</span>
+            <span class="mdc-top-app-bar__title full-text">AFM - Victory Outreach Center</span>
           </a>
           <span class="nav-spacer"></span>
           <a [routerLink]="['/about']" style="color: white;"><span style="width: 100%; height: 100%;" class="material-icons">
