--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,42 +1,36 @@
 <div>
     <div class="col-xs col-md col-lg">
-        <div class="card mb-4 shadow-sm" style="height: fit-content !important;">
-            <div class="card-body" style="min-height: 500px;">
-                <h5 class="card-title" style="font-size: large;">The Vision and Mission of the church</h5>
-                <div class="d-flex justify-content-between align-items-center">
-                    <mat-accordion class="example-headers-align" style="width: 100%;" hideToggle>
-                        <mat-expansion-panel>
-                            <mat-expansion-panel-header>
-                                <mat-panel-title>
-                                    Vision
-                                </mat-panel-title>
-                                <mat-panel-description>
-                                    Read vision
-                                </mat-panel-description>
-                                <mat-icon>remove_red_eye</mat-icon>
-                            </mat-expansion-panel-header>
-                            <p>
-                                We seek by the grace of God to become a victorious Christian community that is multi-cultural and a center of transformation and hope.
-                            </p>
-                        </mat-expansion-panel>
-                        <mat-expansion-panel>
-                            <mat-expansion-panel-header>
-                                <mat-panel-title>
-                                    Mission
-                                </mat-panel-title>
-                                <mat-panel-description>
-                                    Read Mission
-                                </mat-panel-description>
-                                <mat-icon>build</mat-icon>
-                            </mat-expansion-panel-header>
-                            <p>
-                                We believe God has called us to reach out to the community of Meadowlands, Soweto and beyond through the Good News of Jesus Christ for the transformation of the world (transformation at home, community and sphere of influence).
-                            </p>
-                        </mat-expansion-panel>
-                    </mat-accordion>
-                </div>
-            </div>
-        </div>
+        <div class="pb-4" style="width: 85%;" style="padding-left: 1.5%; padding-right: 1.5%;">
+            <mat-accordion class="example-headers-align" style="width: 100%;" hideToggle>
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            Vision
+                        </mat-panel-title>
+                        <mat-panel-description>
+                            Read vision
+                        </mat-panel-description>
+                        <mat-icon>remove_red_eye</mat-icon>
+                    </mat-expansion-panel-header>
+                    <p>
+                        We seek by the grace of God to become a victorious Christian community that is multi-cultural and a center of transformation and hope.
+                    </p>
+                </mat-expansion-panel>
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            Mission
+                        </mat-panel-title>
+                        <mat-panel-description>
+                            Read Mission
+                        </mat-panel-description>
+                        <mat-icon>build</mat-icon>
+                    </mat-expansion-panel-header>
+                    <p>
+                        We believe God has called us to reach out to the community of Meadowlands, Soweto and beyond through the Good News of Jesus Christ for the transformation of the world (transformation at home, community and sphere of influence).
+                    </p>
+                </mat-expansion-panel>
+            </mat-accordion>
     </div>
     <div class="col-xs col-md col-lg">
         <div class="card mb-4 shadow-sm">
