Added message fro 19 April 2020

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,9 @@
 <footer class="text-muted">
   <div class="container">
     <p class="float-right">
-      <a href="#"><button mat-mini-fab color="primary">Top</button></a>
+      <a href="#"><button mat-mini-fab color="primary"><span class="material-icons">
+        home
+        </span></button></a>
     </p>
     <a [routerLink]="['/about']">About VOC</a>
   </div>
