--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -2,6 +2,39 @@
     <div class="col-xs col-md col-lg">
         <div class="card mb-4 shadow-sm">
             <div class="card-body" style="min-height: 500px;">
+                <h5 class="card-title" style="font-size: large;">Sermon for April 26, 2020</h5>
+                <img class="lazyload" alt="" mat-card-image src="../assets/praise.jpg"
+                    style="width: 100%; height: 300px;" />
+                <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please join us
+                    as our Pastor speaks to us about Ascribing praise that is due to the LORD. Be sure to
+                    download the message and share it with everyone around you. <b>[Filesize:
+                        11.8MB]</b></p>
+                <br><br>
+                <div class="d-flex justify-content-between align-items-center">
+                    <figure class="btn-group">
+                        <audio style="max-width: 300px; min-width: 200px !important;" controls>
+                            <source src="../assets/podcast20200426.mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs col-md col-lg">
+        <div class="card mb-4 shadow-sm">
+            <div class="card-body">
+                <h5 class="card-title" style="font-size: large;">Ascribe praise due to the LORD [Slides]</h5>
+                <ng-image-slider [imageSize]="imageSliderSize" [images]="images20200426" #nav></ng-image-slider>
+                <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">We have
+                    compiled this weeks message into pictures. Please click on the pictures above to see today's message
+                    in picture form.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs col-md col-lg">
+        <div class="card mb-4 shadow-sm">
+            <div class="card-body" style="min-height: 500px;">
                 <h5 class="card-title" style="font-size: large;">Sermon for April 19, 2020</h5>
                 <img class="lazyload" alt="" mat-card-image src="../assets/prayer.webp"
                     style="width: 100%; height: 300px;" />
