--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -42,14 +42,14 @@
     </div>
     <div class="col-xs col-md col-lg">
         <app-video [videoDate]="'12 April 2020'" [videoTitle]="'Easter Sunday message'" [videoSize]="'31.4MB'"
-            [videoPoster]="'../assets/videocast2poster.webp'" [videoSrc]="'../assets/videocast2.mp4'"
+            [videoPoster]="'../assets/videocast2poster.webp'" [videoSrc]="'https://drive.google.com/file/d/1XPFNbSS6Tgoi8AySsA67XpgmALl_yQCb/preview'"
             [videoType]="'video/mp4'"
             [videoDescription]="'Please join us in celebrating Easter Sunday with Rev Moss Ntlha as he reads from the book of Acts.'">
         </app-video>
     </div>
     <div class="col-xs col-md col-lg">
         <app-video [videoDate]="'11 April 2020'" [videoTitle]="'The first Easter'" [videoSize]="'42.5MB'"
-            [videoPoster]="'../assets/videocast1poster.webp'" [videoSrc]="'../assets/videocast1.mp4'"
+            [videoPoster]="'../assets/videocast1poster.webp'" [videoSrc]="'https://drive.google.com/file/d/1URmCHoQ99-JB7oQe6rf3PzW5ec1KqxYq/preview'"
             [videoType]="'video/mp4'" [videoDescription]="'Please join us for our Easter Saturday message'"></app-video>
     </div>
     <div class="col-xs col-md col-lg">
