Fixed incorrect title

--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -33,7 +33,7 @@
             [slideSize]="imageSliderSize" [slideImages]="images20200426"></app-slides>
     </div>
     <div class="col-xs col-md col-lg">
-        <app-audio [audioDate]="'19 April 2020'" [audioTitle]="'Ascribe praise due to the LORD'"
+        <app-audio [audioDate]="'19 April 2020'" [audioTitle]="'Prayer for our nation'"
             [audioArt]="'../assets/prayer.webp'" [audioSrc]="'../assets/podcast20200419.mp3'" [audioSize]="'11.2MB'"
             [audioDescription]="'Please join us
             as our Pastor speaks to us during the pendamic and as he also leads us in prayer. Be sure to
