--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -1,4 +1,7 @@
 <div class="alert alert-primary">
+    <b>🎉🎉A blessed and Happy Mother's Day to All our beloved Mothers at VOC. Love from <i>Pastor K & Sister Molly🎊🎊</i></b>
+</div>
+<div class="alert alert-primary">
     Appeal to offering to assist our brethren in need:
     Deposit offering, any amount into church main account and Reference: Name & surname or initial and surname with OHF
     at the end short for Open Heart Fund.<br />
@@ -8,6 +11,14 @@
     Reference: <b>Name + Surname + OHF</b><br />
 </div>
 <div class="row">
+
+    <div class="col-xs col-md col-lg">
+        <app-video [videoDate]="'10 May 2020'" [videoTitle]="'Keep Hope alive'" [videoSize]="'37.2MB'"
+        [videoPoster]="'../assets/videocast2poster.webp'" [videoSrc]="'https://drive.google.com/file/d/1qb16MbQjjeM0XWwHyWC3DyeeHZwnpnJK/preview'"
+        [videoType]="'video/mp4'"
+        [videoDescription]="'Here is this weeks message. This time it is delivered via video from the pastor under the title: Keep hope alive.'">
+    </app-video>
+    </div>
 
     <div class="col-xs col-md col-lg">
         <app-audio [audioDate]="'03 May 2020'" [audioTitle]="'WHAT DOES COVID19 TEACH US?'"
