Allow full screen on videos

--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -4,7 +4,7 @@
         <h5 class="card-title" style="font-size: large;">{{videoTitle}} <b>[Video]</b></h5>
         <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">{{videoDescription}}
             <b>[Filesize: {{videoSize}}]</b></p>
-        <iframe [src]='getVideoURL()' height="420"></iframe>
+        <iframe [src]='getVideoURL()' height="420" allowfullscreen="true"></iframe>
 
     </div>
 </div>
