Allow full screen on videos

--- a/src/app/banner.html
+++ b/src/app/banner.html
@@ -3,6 +3,6 @@
 
     We would like to congratulate 🎉🎉 the Chauke family as they celebrate their wedding anniversary.<br/><br/>
 
-    We would also like to wish everyone who was born in May a happy 🎉🎉 birthday. May God bless you are you celebrate.
+    We would also like to wish everyone who was born in May a happy 🎉🎉 birthday. May God bless you as you celebrate.
 
 </span>
