--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,12 @@
         <span class="mdc-top-app-bar__title short-text">AFM - VOC</span>
         <span class="mdc-top-app-bar__title full-text">AFM - Victory Outreach Center</span>
       </a>
+      <!-- <span class="nav-spacer"></span>
+      <button mat-icon-button color="primary" style="color: white;" matBadge="8" matBadgePosition="after" (click)="notify()" matBadgeColor="accent">
+        <span class="material-icons">
+          notification_important
+          </span>
+      </button> -->
       <span class="nav-spacer"></span>
       <a [routerLink]="['/about']" style="color: white;"><span style="width: 100%; height: 100%;"
           class="material-icons">
@@ -19,7 +25,6 @@
 <br />
 
 <div class="container">
-
   <section class="jumbotron text-center">
     <div class="container">
       <h1><b>AFM VOC</b> - Podcast central</h1>
