--- a/src/app/banner.html
+++ b/src/app/banner.html
@@ -1,8 +1,6 @@
-<span>
-    10 May 2020 Announcements:<br/><br/>
-
-    We would like to congratulate 🎉🎉 the Chauke family as they celebrate their wedding anniversary.<br/><br/>
-
-    We would also like to wish everyone who was born in May a happy 🎉🎉 birthday. May God bless you as you celebrate.
-
-</span>
+<ul>
+    <li *ngFor="let announcement of data">
+        <span>{{announcement.day}}</span><br>
+        <span>{{announcement.message}}</span>
+    </li>
+</ul>
