--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -1,7 +1,4 @@
 <div class="alert alert-primary">
-    <b>🎉🎉A blessed and Happy Mother's Day to All our beloved Mothers at VOC. Love from <i>Pastor K & Sister Molly🎊🎊</i></b>
-</div>
-<div class="alert alert-primary">
     Appeal to offering to assist our brethren in need:
     Deposit offering, any amount into church main account and Reference: Name & surname or initial and surname with OHF
     at the end short for Open Heart Fund.<br />
@@ -12,12 +9,21 @@
 </div>
 <div class="row">
 
+
+    <div class="col-xs col-md col-lg">
+        <app-audio [audioDate]="'17 May 2020'" [audioTitle]="'Get up and eat for the journey is too much for you'"
+            [audioArt]="'../assets/lady-praise.jpg'" [audioSrc]="'../assets/podcast20200517.mp3'" [audioSize]="'11.5MB'"
+            [audioDescription]="'Please join us as Elder Chauke delivers a message of encouragement titled Get up and eat for the journey is too much for you'">
+        </app-audio>
+    </div>
+
     <div class="col-xs col-md col-lg">
         <app-video [videoDate]="'10 May 2020'" [videoTitle]="'Keep Hope alive'" [videoSize]="'37.2MB'"
-        [videoPoster]="'../assets/videocast2poster.webp'" [videoSrc]="'https://drive.google.com/file/d/1qb16MbQjjeM0XWwHyWC3DyeeHZwnpnJK/preview'"
-        [videoType]="'video/mp4'"
-        [videoDescription]="'Here is this weeks message. This time it is delivered via video from the pastor under the title: Keep hope alive.'">
-    </app-video>
+            [videoPoster]="'../assets/videocast2poster.webp'"
+            [videoSrc]="'https://drive.google.com/file/d/1qb16MbQjjeM0XWwHyWC3DyeeHZwnpnJK/preview'"
+            [videoType]="'video/mp4'"
+            [videoDescription]="'Here is this weeks message. This time it is delivered via video from the pastor under the title: Keep hope alive.'">
+        </app-video>
     </div>
 
     <div class="col-xs col-md col-lg">
@@ -53,14 +59,16 @@
     </div>
     <div class="col-xs col-md col-lg">
         <app-video [videoDate]="'12 April 2020'" [videoTitle]="'Easter Sunday message'" [videoSize]="'31.4MB'"
-            [videoPoster]="'../assets/videocast2poster.webp'" [videoSrc]="'https://drive.google.com/file/d/1XPFNbSS6Tgoi8AySsA67XpgmALl_yQCb/preview'"
+            [videoPoster]="'../assets/videocast2poster.webp'"
+            [videoSrc]="'https://drive.google.com/file/d/1XPFNbSS6Tgoi8AySsA67XpgmALl_yQCb/preview'"
             [videoType]="'video/mp4'"
             [videoDescription]="'Please join us in celebrating Easter Sunday with Rev Moss Ntlha as he reads from the book of Acts.'">
         </app-video>
     </div>
     <div class="col-xs col-md col-lg">
         <app-video [videoDate]="'11 April 2020'" [videoTitle]="'The first Easter'" [videoSize]="'42.5MB'"
-            [videoPoster]="'../assets/videocast1poster.webp'" [videoSrc]="'https://drive.google.com/file/d/1URmCHoQ99-JB7oQe6rf3PzW5ec1KqxYq/preview'"
+            [videoPoster]="'../assets/videocast1poster.webp'"
+            [videoSrc]="'https://drive.google.com/file/d/1URmCHoQ99-JB7oQe6rf3PzW5ec1KqxYq/preview'"
             [videoType]="'video/mp4'" [videoDescription]="'Please join us for our Easter Saturday message'"></app-video>
     </div>
     <div class="col-xs col-md col-lg">
