--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -7,8 +7,17 @@
     Account type: <b>Current (Cheque/Bond) Account</b><br />
     Reference: <b>Name + Surname + OHF</b><br />
 </div>
+<div class="alert alert-primary">
+    We have launched a WhatsApp group. If you would like to receive the word via WhatsApp, clicks <a href="https://chat.whatsapp.com/JQ0gWgDtlQ93ghwKfuKsKw">here 💬</a> to join the group.
+</div>
 <div class="row">
 
+    <div class="col-xs col-md col-lg">
+        <app-audio [audioDate]="'24 May 2020'" [audioTitle]="'Put your confidence in the Lord'"
+            [audioArt]="'../assets/faith-in-action.jpg'" [audioSrc]="'../assets/podcast24052020.mp3'" [audioSize]="'9.19MB'"
+            [audioDescription]="'Please join us as Pastor Kekana speaks to us during Covid times about keeping confidence in the Lord.'">
+        </app-audio>
+    </div>
 
     <div class="col-xs col-md col-lg">
         <app-audio [audioDate]="'17 May 2020'" [audioTitle]="'Get up and eat for the journey is too much for you'"
