--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -13,6 +13,13 @@
 <div class="row">
 
     <div class="col-xs col-md col-lg">
+        <app-audio [audioDate]="'31 May 2020'" [audioTitle]="'What does Covid-19 teach us?'"
+            [audioArt]="'../assets/lean.jpg'" [audioSrc]="'../assets/podcast20200531.mp3'" [audioSize]="'18.6MB'"
+            [audioDescription]="'Please join us as Pastor Kekana speaks to us during Covid times on the lessons we can learn from the pandamic.'">
+        </app-audio>
+    </div>
+
+    <div class="col-xs col-md col-lg">
         <app-audio [audioDate]="'24 May 2020'" [audioTitle]="'Put your confidence in the Lord'"
             [audioArt]="'../assets/faith-in-action.jpg'" [audioSrc]="'../assets/podcast24052020.mp3'" [audioSize]="'9.19MB'"
             [audioDescription]="'Please join us as Pastor Kekana speaks to us during Covid times about keeping confidence in the Lord.'">
