--- a/src/app/june/june.component.html
+++ b/src/app/june/june.component.html
@@ -1,4 +1,10 @@
 <div class="row">
+  <div class="col-xs col-md col-lg">
+        <app-audio [audioDate]="'21 June 2020'" [audioTitle]="'Lament during a time of trouble: Reflecting on Psalm 13'"
+            [audioArt]="'../assets/lament.jpg'" [audioSrc]="'../assets/podcast20200621.mp3'" [audioSize]="'8.24MB'"
+            [audioDescription]="'Please join us as Pastor Kekana speaks to us on Lament during a time of trouble: Reflecting on Psalm 13'">
+        </app-audio>
+    </div>
     <div class="col-xs col-md col-lg">
         <app-audio [audioDate]="'14 June 2020'" [audioTitle]="'Look to the rock'"
             [audioArt]="'../assets/rock-of-Jesus.jpg'" [audioSrc]="'../assets/podcast20200614.mp3'" [audioSize]="'21MB'"
