--- a/src/app/april/april.component.html
+++ b/src/app/april/april.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs col-md col-lg">
         <app-audio [audioDate]="'26 April 2020'" [audioTitle]="'Ascribe praise due to the LORD'"
-            [audioArt]="'../assets/praise.jpg'" [audioSrc]="'../assets/podcast20200426.mp3'" [audioSize]="'11.8MB'"
+            [audioArt]="'../assets/praise.jpg'" [audioSrc]="'https://drive.google.com/file/d/1fdIBJHBVH9Jl1-CI5PV4-Hmb0JK6f4Tf/preview'" [audioSize]="'11.8MB'"
             [audioDescription]="'Please join us as our Pastor speaks to us about Ascribing praise that is due to the LORD. Be sure to download the message and share it with everyone around you.'">
         </app-audio>
 
@@ -12,7 +12,7 @@
     </div>
     <div class="col-xs col-md col-lg">
         <app-audio [audioDate]="'19 April 2020'" [audioTitle]="'Prayer for our nation'"
-            [audioArt]="'../assets/prayer.webp'" [audioSrc]="'../assets/podcast20200419.mp3'" [audioSize]="'11.2MB'"
+            [audioArt]="'../assets/prayer.webp'" [audioSrc]="'https://drive.google.com/file/d/1fnIs-ZnT74IDUIsBK_MBG36XWusNTWu7/preview'" [audioSize]="'11.2MB'"
             [audioDescription]="'Please join us
             as our Pastor speaks to us during the pendamic and as he also leads us in prayer. Be sure to
             download the message and share it with everyone around you.'">
